Fix `Section` spacing

--- a/components/sections/Section.module.scss
+++ b/components/sections/Section.module.scss
@@ -16,7 +16,7 @@
 }
 
 .section-header {
-  margin-bottom: 6rem;
+  margin-bottom: 9rem;
 
   text-align: center;
 
